# firmament

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  cliff.toml  clippy.toml  deny.toml  devenv.nix  justfile  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
crates/firmament-core/: Cargo.toml
crates/firmament-core/examples/: blink_runner.rs
crates/firmament-core/src/: error.rs  firmament.rs  lib.rs  logging.rs  mcu.rs  system.rs  traits.rs  volatile_access.rs
crates/firmament-core/src/mcu/: budget.rs  channels.rs  config.rs  executor.rs  firmware.rs  handle.rs  imports.rs  mmio.rs  runtime.rs  state.rs
crates/firmament-core/tests/: blink.rs
crates/firmament-fm/: Cargo.toml
crates/firmament-fm/src/: lib.rs
docs/: book.toml
docs/src/: introduction.md
examples/blink/: Cargo.toml
examples/blink/src/: main.rs
