[package]
name = "firmament-core"
description = "Host-side runtime for the Firmament virtual MCU, including the WASM executor, cycle budget, MMIO, and interrupt handling"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bon.workspace = true
miette.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { version = "1.52.2", features = ["rt", "rt-multi-thread", "sync", "macros"] }
wasmtime = "44.0.1"

[lints]
workspace = true
