[package]
name = "firmament-fm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CPU primitives for the Firmament virtual MCU — WASM import declarations for memory-mapped I/O, sleep, and debug logging"

[dependencies]

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[lints.rust]
unsafe_code = "allow"
